--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,3 +1,30 @@
+.cat-links {
+  position: fixed;
+  top: 10px; left:0;
+  z-index: 999;
+  width: 50vw;
+  display : inline-flex;
+  justify-content: space-around; 
+  margin-left: 30vw;
+
+  li {
+    list-style: none;
+  }
+  
+}
+
+.linkCat {
+  color: white;
+  text-transform: uppercase;
+  font-size: 2rem;
+  padding: 30px;
+  text-decoration: none; 
+  font-family: 'Oswald', sans-serif;
+ -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+}
+
 
 /* Base font size for the document */
 html {
@@ -32,9 +59,6 @@ p {
   html {
     font-size: 10px;
   }
-  .burger {
-    width: 50px;
-  }
 }
 
 /* Styles for screens at least 768px wide */
@@ -63,16 +87,54 @@ p {
 }
 
 
+.logoTestigos {
+  position: absolute;
+  top:0;right: 0;
+  width: auto;
+  height: 90vh;
+  z-index: 55;
+  margin:5vh;
+}
+.lockupExpo {
+  path {
+    fill: red;
+  }
+}
+
+
+.lockupText {
+
+  position: sticky;
+  top:60px;
+  left:340px;
+  z-index: 9999;
+  width: calc(20vw + 250px);
+  max-width: 450px;
+  min-width: 200px;
+  margin-top: 40px;
+
+}
+
+@media screen and (max-width: 1024px) {
+  /* ... */
+
+  .lockupText {
+    margin-top: 0px;
+    left:30px;
+    position: sticky;
+  }
+}
+
+
 .burger {
   
   position: fixed;
-  top:20px;
-  right:10px;
+  top:30px;
+  left:30px;
   z-index: 9999;
-  width: 80px;
-  height: 10vw;
-
-
+  width: calc(20vw + 100px);
+  max-width: 300px;
+  min-width: 200px;
 }
 
 .nav-links {
@@ -220,6 +282,7 @@ body {
   position: sticky;
   top: 33%;
   width: 100vw;
+  height: 100vh;
   padding: 0;
   margin:0;
 /*   border: #61dafb 1px solid; */
@@ -228,6 +291,7 @@ body {
 H1 {
   width: 60%;
   z-index: 900;
+  display: none;
 }
 p { 
   max-width: 80vw;
@@ -236,14 +300,18 @@ p {
 
 .sticky-text {
   position: sticky;
-  padding: 25px 130px 25px 20px;
+  padding: 25px 0 25px calc(20vw + 150px);
   background-color: #FFFAC9;
   top:0;
-  min-height:70px;
   font-size: 2.5rem;
   display: flex; 
   align-items: center;
   text-align: center;
+
+  height: calc(20vw + 150px);
+  max-height: 300px;
+  min-height: 200px;
+
 }
 
 
@@ -271,7 +339,7 @@ p {
 }
 .top-5 {
   background-color: #FFF;
- border: 1px solid #61dafb;
+  border: 1px solid #61dafb;
   color:#61dafb;
 }
 .top-6 {
