--- a/src/components/App/MobileTimeline.scss
+++ b/src/components/App/MobileTimeline.scss
@@ -9,18 +9,21 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    border: 1px solid pink;
   
     .mobile-timeline-wrapper {
       height: 100%;
       display: flex;
       width: 400%;
       text-align: center;
-  
+      border: 1px solid green;
      
 
   
       .timeline-graphics {
-        height: 100%;
+        width: 400%;
+        border: 1px solid red;
+
       }
     }
   
@@ -30,6 +33,7 @@
   }
 
   .timeline-circle {
+    selectable: false;
     height: 450px;
     width: 450px;
     position: absolute;
