responsive footer amends

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -65,11 +65,11 @@
 
 
 .logos-bar {
-  width: 100vw;
+  width: 90vw;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 10px 20px;
+  padding: 20px;
   p {
     color:white;
     text-align: left;
