--- a/src/components/App/MobileTimeline.scss
+++ b/src/components/App/MobileTimeline.scss
@@ -1,30 +1,16 @@
 .mobile-timeline-container {
-    width: 100%;
-    height: 65vh;
-    min-height: 450px;
-    max-height: 800px;
-    overflow-x: auto;
+    width: 100vw;
     overflow-y: hidden;
     display: flex;
-    justify-content: center;
     align-items: center;
     position: relative;
-    border: 1px solid pink;
+    justify-content: flex-start;
   
     .mobile-timeline-wrapper {
       height: 100%;
       display: flex;
-      width: 400%;
-      text-align: center;
-      border: 1px solid green;
      
 
-  
-      .timeline-graphics {
-        width: 400%;
-        border: 1px solid red;
-
-      }
     }
   
     @media (min-width: 768px) {
@@ -33,7 +19,7 @@
   }
 
   .timeline-circle {
-    selectable: false;
+    user-select: none;
     height: 450px;
     width: 450px;
     position: absolute;
@@ -43,7 +29,10 @@
     transform: translate(-50%,-56%);
     flex-direction: column;
     justify-content: center;
+    white-space:normal;
     display: flex;
+    z-index: 40;
+    
     h3 {
         max-width: 50%;
         margin: 10px auto;
