--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -8,7 +8,7 @@
 }
 
 .big-foto {
-  margin: 0 auto;
+  margin: 2vh auto;
   width: 80%;
   position: relative;
   display: flex;
@@ -361,11 +361,10 @@ p {
 .big-title {
   font-size: 4rem;
   font-family: 'Fabriga', sans-serif;
-  margin: auto;
+  margin: 2vh auto;
   width: 100%;
   text-align: center;
 }
-
 
 .lockupText {
 
