--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,6 +7,16 @@
   url("../../fonts/fabriga.svg#Fabriga") format("svg"); /* iOS 4.1- */
 }
 
+.LazyLoad {
+  opacity: 0;
+  transition: all 1s ease-in-out;
+}
+
+.is-visible {
+  opacity: 1;
+}
+
+
 .big-foto {
   margin: 2vh auto;
   width: 80%;
