--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,6 +7,94 @@
   url("../../fonts/fabriga.svg#Fabriga") format("svg"); /* iOS 4.1- */
 }
 
+
+// mixins // // // // // // // // // // // // // // // // // // // // // // // // // // // 
+
+// da breakpoints
+$s-break: 480px;
+
+$m-break: 768px;
+
+$l-break: 1200px;
+
+
+// Define the mixin for mobile devices
+@mixin small {
+  @media (min-width: $s-break) {
+    @content;
+  }
+}
+
+// Define the mixin for mobile devices
+@mixin medium {
+  @media (min-width: $m-break) {
+    @content;
+  }
+}
+
+// Define the mixin for mobile devices
+@mixin large {
+  @media (min-width: $m-break) {
+    @content;
+  }
+}
+
+
+/* Base font size for the document */
+html {
+  font-size: 8px;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  @include small {
+    font-size: 9px;
+
+  }
+  @include medium {
+    font-size: 10px;
+
+  }
+  @include large {
+    font-size: 12px;
+
+  }
+}
+
+/* Headings */
+h1 {
+  font-size: 2.5rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-size: 1.2rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+/* Paragraphs */
+p {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  font-weight: 700;
+  & a {
+    color: #1d1d1b;
+    text-decoration: none;
+    font-weight: 900;
+  }
+}
+
+.wideRead {
+  line-height: 180%;
+  max-width: 80vw;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+
+// helper clases
+
 .LazyLoad {
   opacity: 0;
   transition: all 1s ease-in-out;
@@ -26,7 +114,6 @@
 .subtitle {
   font-size: 2rem;
 }
-
 
 .fuente {
   color: #777;
@@ -51,8 +138,6 @@
 .anomalia {
   color:#3e81c3;
 }
-
-
 .sequia {
   color:#e6be8b;
 }
@@ -65,52 +150,6 @@
   display: block;
 }
 
-.slider.aws-btn {
-
-  --slider-height-percentage: 60%;
-  --slider-transition-duration: 700ms;
-  --organic-arrow-thickness: 12px;
-  --organic-arrow-border-radius: 6px;
-  --organic-arrow-height: 40px;
-  --organic-arrow-color: #FFF;
-  --control-button-width: 10%;
-  --control-button-height: 25%;
-  --control-button-background: transparent;
-  --control-bullet-color: #FFF;
-  --control-bullet-active-color: #d5d5d5;
-  --loader-bar-color: #FFF;
-  --loader-bar-height: 3px;
-  }
-
-  .slider-bullets {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    border: 1px solid red;
-  }
-  
-  .slider-bullets li {
-    width: 10px;
-    height: 10px;
-    margin: 5px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  
-  .slider-bullets li.active {
-    background-color: #fff;
-  }
- 
-  
-  
-  
-
-
 .lafabulosa {
  
   text-transform: uppercase;
@@ -120,36 +159,6 @@
   }
 }
 
-.slider-container {
-  position: relative;
-}
-
-.slider-controls {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.slider-control {
-  margin: 0 10px;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  border: none;
-  background-color: rgba(255, 255, 255, 1);
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.slider-control.active {
-  background-color: #fff;
-}
-///
 .heatBar {
   width: 40vw;
   text-align: center;
@@ -159,6 +168,9 @@
   display: flex;
 }
 
+
+
+////foooter////////////////////////////////////////////////////////////////
 .logo-footer {
   height: 160px;
   display: inline-flex;
@@ -231,7 +243,6 @@
 
 
 }
-
 .instagramIcon {
   height: 34px;
   display: inline-block;
@@ -241,15 +252,29 @@
 }
 .instaIconText {
   color: #FFF;
-  font-size: 2.2rem;
+  font-size: 1.5rem;
   margin: 0;
   align-self: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
+  @include small  {
+    font-size: 2.2rem;
+  }
+  @include large  {
+    font-size: 3rem;
+  } 
 }
 
 .cat-links-footer li {
   padding: 5px;
 }
+
+
+
+
+/////menu/////////////////////////////////////////////////////////////
+
 
 .cat-links {
   position: fixed;
@@ -283,93 +308,13 @@
 }
 
 
-/* Base font size for the document */
-html {
-  font-size: 8px;
-  -webkit-font-smoothing:antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-/* Headings */
-h1 {
-  font-size: 2.5rem;
-  line-height: 1.2;
-  margin-bottom: 1rem;
-}
-
-h2 {
-  font-size: 1.2rem;
-  line-height: 1.2;
-  margin-bottom: 1rem;
-}
-
-/* Paragraphs */
-p {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-  font-weight: 700;
-  & a {
-    color: #1d1d1b;
-    text-decoration: none;
-    font-weight: 900;
-  }
-}
-
-.wideRead {
-  line-height: 180%;
-  max-width: 80vw;
-  margin: 0 auto;
-  padding: 2rem;
-}
-
-
-@media screen and (max-width: 450px) {
-  /* ... */
-
-  html {
-    font-size: 10px;
-  }
-
-  .logoTestigos {
-   
-    height: 60vh;
-  
-  }
-  
-}
-
-/* Styles for screens at least 768px wide */
-@media screen and (min-width: 768px) {
-  /* ... */
-  html {
-    font-size: 12px;
-  }
-
-}
-
-/* Styles for screens at least 992px wide */
-@media screen and (min-width: 992px) {
-  html {
-    font-size: 14px;
-  }
-}
-
-/* Styles for screens at least 1200px wide */
-@media screen and (min-width: 1200px) {
-  /* ... */
- 
-    html {
-      font-size: 16px;
-    }
-}
-
 
 .menu {
 
   visibility:hidden;
   opacity: 0;
-
   transform: translateX(100%);
+
    &.active {
     transform: translateX(0);
     visibility: visible;
@@ -377,7 +322,6 @@ p {
   }
   transition: all 1s ease-in-out;
 }
-
 
 
 .logoTestigos {
@@ -392,6 +336,10 @@ p {
     z-index: 999;
   }
   transition: all 1s;
+  @include small {
+    height: 60vh;
+  }
+  
 }
 
 .logoTestigos-menu {
@@ -403,12 +351,9 @@ p {
   margin:5vh;
 }
 
-.lockupExpo {
-
-}
 
 .big-title {
-  font-size: 6rem;
+  font-size: 2rem;
   font-family: 'Fabriga', sans-serif;
   margin: 2vh auto;
   width: 90%;
@@ -418,56 +363,80 @@ p {
     font-size: 3rem;
 
   }
+ 
+  @include medium {
+
+    font-size: 4rem;
+  }
+  @include large {
+    font-size: 6rem;
+  }
 }
 
 .lockupText {
-
-  position: sticky;
-  top:60px;
-  left:300px;
-  z-index: 99;
-  width: calc(20vw + 50px);
-  max-width: 450px;
-  min-width: 100px;
-  margin-top: 20px;
-  transform:translateY(0px);
   
+  position: absolute;
+  top:30px;
+  left: 190px;
+  width: auto;
+  height: 150px;
+  margin:0;
+  z-index: 10;
 
-}
+  @include small {
 
-@media screen and (max-width: 1024px) {
-  /* ... */
-
-  .lockupText {
-    position: absolute;
-    top:40vh;
-    width: auto;
-    height: 90vh;
-    margin:0;
- 
   }
 
-  .logoTestigos {
-    height: 60vh;
-  
-  }
+  @include medium {
 
+  }
+  @include large {
+
+  }
 }
+
 
 
 .burger {
-  
-  position: fixed;
-  top:30px;
-  left:30px;
   z-index: 9999;
+  position: fixed;
+  top:10px;
+  left:10px;
   width: calc(20vw + 100px);
-  max-width: 200px;
-  min-width: 200px;
+  max-width: 80px;
+  min-width: 80px;
   transition: all 0.7s ease-in-out;
   transform: rotate(0);
+    // Include your mixins
+    @include small {
+      // Add styles specific to the small burger menu
+      top:20px;
+      left:20px;
+      width: calc(20vw + 100px);
+      max-width: 100px;
+      min-width: 100px;
+    }
+  
+    @include medium { 
+      // Add styles specific to the medium burger menu
+      top:30px;
+      left:30px;
+      width: calc(20vw + 100px);
+      max-width: 150px;
+      min-width: 150px;
 
- 
+    }
+  
+    @include large {
+      // Add styles specific to the large burger menu
+      top:30px;
+      left:40px;
+      width: calc(20vw + 100px);
+      max-width: 150px;
+      min-width: 150px;
+    }
+
+    
 }
 
 .activeMenu {
@@ -673,9 +642,7 @@ H1 {
   z-index: 900;
   display: none;
 }
-p { 
 
-}
 
 .sticky-text {
   position: sticky;
@@ -686,10 +653,32 @@ p {
   display: flex; 
   align-items: center;
   text-align: center;
-  height: calc(20vw + 50px);
-  max-height: 200px;
-  min-height: 200px;
+  height: 100px;
   margin: 0;
+
+    @include small {
+      // Add styles specific to the small burger menu
+      font-size: 2.5rem;
+
+
+    }
+  
+    @include medium { 
+      // Add styles specific to the medium burger menu
+   
+      height: 120px;
+      font-size: 2.5rem;
+    }
+  
+    @include large {
+      // Add styles specific to the large burger menu
+      height: 150px;
+      font-size: 3rem;
+
+    }
+
+
+
 }
 
 
