--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;600;700&family=Roboto:wght@400;700;900&display=swap');
 
 body {
   margin: 0;
@@ -10,7 +9,9 @@ body {
 
 title {
  
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Fabriga', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 
