--- a/src/components/App/Timeline.scss
+++ b/src/components/App/Timeline.scss
@@ -32,8 +32,10 @@ $l-break: 1200px;
 }
 
 .timeline-arrow {
-width: 30px;
-transform: translate(15px);
+	width: 30px;
+	transform: translate(-150%,40%);
+	position: absolute;
+
 }
 
 .timeline-tooltip {
@@ -41,42 +43,62 @@ transform: translate(15px);
 	z-index: 20;
 	width: auto;
 	height: 150px;
-	min-width: 150px;
-	max-width: 370px;
+	min-width: 180px;
+	max-width: 300px;
 	color: #1d1d1b;
 	white-space: normal;
 	position: absolute;
-	top:0;
+
+
+	
+	@include small {
+		height:150px;
+
+	}
+	@include medium() {
+		height:150px;
+
+	}
+	@include large {
+		height: 150px;
+
+	}
+
+	&.reverse {
+		text-align: right;
+		transform: translateX(-100%);
+		.timeline-arrow {
+			transform: rotate(0deg) translate(150%,40%);	
+		}
+	}
 
 	h4 {
-	transform: translate(60px,60px); 
 	font-size: 1.8rem;
 	border-bottom: 5px solid #3D80C2;
 	font-weight: 900;
 	display: inline-block;
 	padding-bottom: 20px;
-	margin: 10px 0;
+	height: auto;
+	margin: 0;
 	}
 		p  {
 			font-size: 1rem;
-			margin: 0;
+			margin-top: 10px;
 			padding: 0;
-			transform: translate(60px,60px); 
 		}
 }
 
 
 .tooltip-wrapper {
 	
-	height:50px;
-	border:1px solid red;
+	height:150px;
 	margin: 0;
 	padding: 0;
 	display: flex;
 	position: relative;
 
 	@include small {
-		height:50px;
+		height:150px;
 
 	}
 	@include medium() {
@@ -90,7 +112,6 @@ transform: translate(15px);
 
 	&.down-wrapper {
 
-		border: 1px solid purple;
 		height:100px;
 		display: flex;
 		justify-content: flex-start;
@@ -100,8 +121,9 @@ transform: translate(15px);
 		padding: 0;
 		padding-top: 4px;
 
+
 		@include small {
-			height:100px;
+			height:200px;
 	
 		}
 		@include medium() {
@@ -112,6 +134,29 @@ transform: translate(15px);
 			height: 250px;
 	
 		}
+
+		.timeline-arrow {
+		
+		  transform: rotate(180deg) translate(150%,0);	
+
+		}
+
+		.timeline-tooltip {
+
+			left: 100%;
+			top:100px;
+			&.reverse {
+			
+				left: 0;
+				transform: translateX(-100%);
+				.timeline-arrow {
+	
+					transform: rotate(180deg) translate(-200%,-0);	
+				  }
+			
+			}
+		}
+
 	}
 }
 .timeline-triangle {
@@ -183,12 +228,12 @@ transform: translate(15px);
 
 .timeline-color-block {
 	width: 100%;
-	height: 250px;
+	height: 260px;
 	display: flex;
 	align-items: stretch;
 
 	@include small {
-		height: 250px;
+		height: 265px;
 	}
 
 	@include medium {
@@ -205,7 +250,7 @@ transform: translate(15px);
     pointer-events: none;
     position: absolute;
     margin: auto;
-	top:43%;
+
     left:50%;
     transform: translate(-50%,-56%);
     flex-direction: column;
@@ -230,28 +275,29 @@ transform: translate(15px);
 
 	height: 200px;
     width: 200px;
+	top:290px;
 
     @include small {
-		height: 300px;
-		width: 300px;
-		top:340px;
+		height: 250px;
+		width: 250px;
+		top:297px;
 
 	}
 	@include medium {
 		height: 350px;
 		width: 350px;
-		top:390px;
+		top:45.4%;
 
 	}
 	@include large {
-		height: 450px;
-		width: 450px;
-		top:490px;
-
+		height: 420px;
+		width: 420px;
+		top:400px;
 	} 
 }
 .mobile-timeline-container {
    
+
     display: flex;
     align-items: center;
     position: relative;
@@ -262,7 +308,6 @@ transform: translate(15px);
 	white-space: nowrap;
 	justify-content: flex-start;
 
-	border: 1px solid blue;
 	height: auto;
 	width: 100vw;
 
@@ -287,3 +332,6 @@ transform: translate(15px);
 
   }
 
+.timeline-container {
+	padding:0 40px;
+}
